<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sendMessageScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/sendMessageLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
		
        <!--essential-->
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipientEmail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/recipientEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messageBody"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/bodyET"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:ems="10"
            android:inputType="textMultiLine" />
		<!-- date -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DateBoolean"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/dateToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />
		 <!--inflate -->

		<!--inflate end -->
		<!-- location -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationBoolean"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/locationToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" /> 
		 <!--inflate -->

		<!--inflate end -->               		

		<!--weather-->
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weatherCondtionBoolean"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/weatherToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />
		<!--inflate  -->
 
		<!--inflate end -->

		<!--image -->
        <ImageView
            android:id="@+id/selectImageIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/selectImageBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pickImage"
            android:text="Pick a picture" />


                
        <Button
            android:id="@+id/sendMessageBtnReal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/sendMessageBtn" />

    </LinearLayout>

</ScrollView>